Improve menu behavior on mobile, fix bootstrap conflict on the class 'hide'

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -136,10 +136,10 @@
 	color: white;
 	transition: all 0.2s ease-in;
 }
-.menu-toggle.hide {
+.menu-toggle.ishidden {
 	bottom: -3em;
 }
-.toggled .menu-toggle.hide{
+.toggled .menu-toggle.ishidden{
 	bottom: 1em;
 }
 .main-navigation.toggled {
