--- a/style.css
+++ b/style.css
@@ -551,10 +551,10 @@ a {
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in; }
 
-.menu-toggle.hide {
+.menu-toggle.ishidden {
   bottom: -3em; }
 
-.toggled .menu-toggle.hide {
+.toggled .menu-toggle.ishidden {
   bottom: 1em; }
 
 .main-navigation.toggled {
